# python-project

./: README.md  main.py  pyproject.toml  stt-project-403600-45d8aecf877d.json
src/: crawling.py  gensim_test.py  get_weather.py  news_crawling.py  news_crawling.py.ipynb  pyqt5_test.py  schedule.py  speech.py  stt_test.py  summa_test.py  test.py  textrankr_test.py  tts_test.py  voice_recognition.py
src/utils/: get_weather.py  news_crawling.py  translator.py
